Gloabl UI ISSUES -footer, left menu, donut center alignments issues fixed

--- a/src/app/components/overview-page/overview/overview.component.scss
+++ b/src/app/components/overview-page/overview/overview.component.scss
@@ -81,6 +81,9 @@
               vertical-align: middle;
             }
           }
+          a:hover {
+            text-decoration: underline;
+          }
         }
       }
       .cust-width-blank {
